force-app/main/default/objects/Opportunity/fields/DU_ApplicationPercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_ApplicationPercentage__c</fullName>
    <description>CDM: Effort based remuneration - Application percentage</description>
    <label>Application Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>