force-app/main/default/objects/Opportunity/fields/DU_ApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>DU_ApplicationSource__c</fullName>
    <description>CDM: Effort based remuneration - who executed Application submission</description>
    <inlineHelpText>Effort based remuneration - who executed Application submission</inlineHelpText>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_RemunerationSource</valueSetName>
    </valueSet>
</CustomField>