force-app/main/default/objects/Opportunity/fields/DU_ApplicationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>DU_ApplicationTimestamp__c</fullName>
    <description>CDM: Effort based remuneration - Application timestamp</description>
    <label>Application Timestamp</label>
    <type>DateTime</type>
</CustomField>