force-app/main/default/objects/Opportunity/fields/DU_Automations__c.field-meta.xml
<CustomField>
    <fullName>DU_Automations__c</fullName>
    <description>CDM: Field displays the automation running in the back on this record. Availability 2.1.0-18</description>
    <inlineHelpText>This field shows, which automation is running in the back on this record</inlineHelpText>
    <label>Automations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_Automations</valueSetName>
    </valueSet>
</CustomField>