force-app/main/default/objects/Opportunity/fields/DU_Comments__c.field-meta.xml
<CustomField>
    <fullName>DU_Comments__c</fullName>
    <description>CDM: Holds comments for the opportunity record</description>
    <inlineHelpText>Holds comments for the opportunity record</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>