force-app/main/default/objects/Opportunity/fields/DU_ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>DU_ContractNumber__c</fullName>
    <description>CDM: Contains the number of the contract for the opportunity record from the source system</description>
    <externalId>true</externalId>
    <inlineHelpText>Contains the number of the contract for the opportunity record from the source system</inlineHelpText>
    <label>Contract Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>