force-app/main/default/objects/Opportunity/fields/DU_DateBeginOfMarketingActivities__c.field-meta.xml
<CustomField>
    <fullName>DU_DateBeginOfMarketingActivities__c</fullName>
    <description>CDM: Global Field used for more accurate Opportunity reporting. In Order to work with an opportunity it is usually required to send the customer marketing communication. The Date of this initial send out should be stored on the opportunity in order to enable it as a field/ additional information in reports.</description>
    <inlineHelpText>Global Field used for more accurate Opportunity reporting. In Order to work with an opportunity it is usually required to send the customer marketing communication. The Date of this initial send out should be stored on the opportunity in order to enable it as a field/ additional information in reports.</inlineHelpText>
    <label>Sent Date</label>
    <type>Date</type>
</CustomField>