force-app/main/default/objects/Opportunity/fields/DU_DaysUntilConversion__c.field-meta.xml
<CustomField>
    <fullName>DU_DaysUntilConversion__c</fullName>
    <description>CDM: Global formula field which is used for more accurate Opportunity reporting. This field is calculates the timeframe between the &quot;Sent Date&quot; and the &quot;Close Date&quot; for won Opportunities. This way it is possible to see the average time which goes by before a customer converts after receiving marketing communication. By making this formula a field it is possible to use the data in bulk fields in a report which can lead to better performance inisights.</description>
    <formula>IF(ISPICKVAL(StageName, &quot;Closed Won&quot;),
    CloseDate -  DU_DateBeginOfMarketingActivities__c, null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Global formula field which is used for more accurate Opportunity reporting. This field is calculates the timeframe between the &quot;Sent Date&quot; and the &quot;Close Date&quot; for won Opportunities. This way it is possible to see the average time which goes by before a customer converts after receiving marketing communication. By making this formula a field it is possible to use the data in bulk fields in a report which can lead to better performance inisights.</inlineHelpText>
    <label>Days until Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>