force-app/main/default/objects/Opportunity/fields/DU_DealerRemunerationPercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_DealerRemunerationPercentage__c</fullName>
    <description>CDM: Effort based remuneration - dealer&apos;s share of remuneration. Only calculated if all percentages are populated (even single percentage null value =&gt; null result)</description>
    <formula>IF(
ISBLANK(DU_LeadGenerationPercentage__c) ||
ISBLANK(DU_OfferPercentage__c) ||
ISBLANK(DU_ApplicationPercentage__c) ||
ISBLANK(DU_SignaturePercentage__c) ||
ISBLANK(DU_HandoverPercentage__c),

null,

IF(ISPICKVAL(DU_LeadGenerationSource__c, &apos;Dealer&apos;) , DU_LeadGenerationPercentage__c, 0) +
IF(ISPICKVAL(DU_OfferSource__c, &apos;Dealer&apos;) , DU_OfferPercentage__c, 0) +
IF(ISPICKVAL(DU_ApplicationSource__c, &apos;Dealer&apos;) , DU_ApplicationPercentage__c, 0) +
IF(ISPICKVAL(DU_SignatureSource__c, &apos;Dealer&apos;) , DU_SignaturePercentage__c, 0) +
IF(ISPICKVAL(DU_HandoverSource__c, &apos;Dealer&apos;) , DU_HandoverPercentage__c, 0)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dealer&apos;s share of remuneration. Calculated from milestones claimed by dealer.</inlineHelpText>
    <label>Dealer Remuneration Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>