force-app/main/default/objects/Opportunity/fields/DU_ExpectedMileage__c.field-meta.xml
<CustomField>
    <fullName>DU_ExpectedMileage__c</fullName>
    <description>CDM: Contains the expected yearly mileage for the contract record</description>
    <inlineHelpText>Contains the expected yearly mileage for the contract record</inlineHelpText>
    <label>Expected mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>