force-app/main/default/objects/Opportunity/fields/DU_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>DU_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM:Relates the opportunity to the guarantor​. Availability 2.0.0.13</description>
    <inlineHelpText>Link between Opportunity and guarantor</inlineHelpText>
    <label>Guarantor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>VWFS CRM Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Guarantor)</relationshipLabel>
    <relationshipName>DU_OpportunitiesGuarantor</relationshipName>
    <type>Lookup</type>
</CustomField>