force-app/main/default/objects/Opportunity/fields/DU_HandoverPercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_HandoverPercentage__c</fullName>
    <description>CDM: Effort based remuneration - Handover percentage</description>
    <label>Handover Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>