force-app/main/default/objects/Opportunity/fields/DU_HandoverSource__c.field-meta.xml
<CustomField>
    <fullName>DU_HandoverSource__c</fullName>
    <description>CDM: Effort based remuneration - who executed asset Handover</description>
    <inlineHelpText>Effort based remuneration - who executed asset Handover</inlineHelpText>
    <label>Handover Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_RemunerationSource</valueSetName>
    </valueSet>
</CustomField>