force-app/main/default/objects/Opportunity/fields/DU_HandoverTimestamp__c.field-meta.xml
<CustomField>
    <fullName>DU_HandoverTimestamp__c</fullName>
    <description>CDM: Effort based remuneration - Handover timestamp</description>
    <label>Handover Timestamp</label>
    <type>DateTime</type>
</CustomField>