force-app/main/default/objects/Opportunity/fields/DU_InteractionStep__c.field-meta.xml
<CustomField>
    <fullName>DU_InteractionStep__c</fullName>
    <description>CDM: Contains the value of stage on journey side when BFF pushes the interaction.</description>
    <inlineHelpText>Contains the value of stage on journey side when BFF pushes the interaction.</inlineHelpText>
    <label>Interaction Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identification Details Provided</fullName>
            </value>
            <value>
                <fullName>Contact Details Provided</fullName>
            </value>
            <value>
                <fullName>Payment Details Provided</fullName>
            </value>
            <value>
                <fullName>Employment Details Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>