force-app/main/default/objects/Opportunity/fields/DU_LeadGenerationPercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_LeadGenerationPercentage__c</fullName>
    <description>CDM: Effort based remuneration - Lead Generation percentage</description>
    <label>Lead Generation Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>