force-app/main/default/objects/Opportunity/fields/DU_LeadGenerationSource__c.field-meta.xml
<CustomField>
    <fullName>DU_LeadGenerationSource__c</fullName>
    <description>CDM: Effort based remuneration - who executed Lead generation</description>
    <inlineHelpText>Effort based remuneration - who executed Lead generation</inlineHelpText>
    <label>Lead Generation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_RemunerationSource</valueSetName>
    </valueSet>
</CustomField>