force-app/main/default/objects/Opportunity/fields/DU_LeadGenerationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>DU_LeadGenerationTimestamp__c</fullName>
    <description>CDM: Effort based remuneration - Lead generation timestamp</description>
    <label>Lead Generation Timestamp</label>
    <type>DateTime</type>
</CustomField>