force-app/main/default/objects/Opportunity/fields/DU_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>DU_LegalEntity__c</fullName>
    <description>CDM: Field to capture the legal entity who is contract partner of the related opportunity. Availability 2.1.0.3</description>
    <inlineHelpText>Field to capture the legal entity who is contract partner of the related opportunity.</inlineHelpText>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_LegalEntity</valueSetName>
    </valueSet>
</CustomField>