force-app/main/default/objects/Opportunity/fields/DU_Make__c.field-meta.xml
<CustomField>
    <fullName>DU_Make__c</fullName>
    <description>CDM: Global Picklist: Contains the name of the company, which produced the vehicle</description>
    <inlineHelpText>Global Picklist: Contains the name of the company, which produced the vehicle</inlineHelpText>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_Make</valueSetName>
    </valueSet>
</CustomField>