force-app/main/default/objects/Opportunity/fields/DU_MasterOpportunityID__c.field-meta.xml
<CustomField>
    <fullName>DU_MasterOpportunityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the opportunity to a master opportunity</description>
    <inlineHelpText>Relates the opportunity to a master opportunity</inlineHelpText>
    <label>Master Opportunity ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Master Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Master Opportunity)</relationshipLabel>
    <relationshipName>DU_OpportunitiesMasterOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>