force-app/main/default/objects/Opportunity/fields/DU_OfferPercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_OfferPercentage__c</fullName>
    <description>CDM: Effort based remuneration - Offer percentage</description>
    <label>Offer Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>