force-app/main/default/objects/Opportunity/fields/DU_OfferSource__c.field-meta.xml
<CustomField>
    <fullName>DU_OfferSource__c</fullName>
    <description>CDM: Effort based remuneration - who executed Offer (quote that was accepted by customer)</description>
    <inlineHelpText>Effort based remuneration - who executed Offer (quote that was accepted by customer)</inlineHelpText>
    <label>Offer Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_RemunerationSource</valueSetName>
    </valueSet>
</CustomField>