force-app/main/default/objects/Opportunity/fields/DU_OfferTimestamp__c.field-meta.xml
<CustomField>
    <fullName>DU_OfferTimestamp__c</fullName>
    <description>CDM: Effort based remuneration - Offer timestamp</description>
    <label>Offer Timestamp</label>
    <type>DateTime</type>
</CustomField>