force-app/main/default/objects/Opportunity/fields/DU_OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>DU_OpportunityNumber__c</fullName>
    <description>CDM: Unique ID of the opportunity</description>
    <externalId>true</externalId>
    <inlineHelpText>Opportunity Number (Salesforce or external system given)</inlineHelpText>
    <label>Opportunity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>