force-app/main/default/objects/Opportunity/fields/DU_OriginalContract__c.field-meta.xml
<CustomField>
    <fullName>DU_OriginalContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: References the previous contract to this opportunity. Renewal opportunities will be automatically created prior to its expiration for Asset Based Income (ABI) contracts. Availability 2.0.0.7</description>
    <inlineHelpText>References the previous contract to this opportunity.</inlineHelpText>
    <label>Original Contract</label>
    <referenceTo>DU_Contract__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>DU_OpportunitiesOriginalContract</relationshipName>
    <type>Lookup</type>
</CustomField>