force-app/main/default/objects/Opportunity/fields/DU_OriginalContractNumber__c.field-meta.xml
<CustomField>
    <fullName>DU_OriginalContractNumber__c</fullName>
    <description>CDM: Stores the number of the old contract this opportunity is based on, e.g., contract to be renewed.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores the number of the old contract this opportunity is based on, e.g., contract to be renewed.</inlineHelpText>
    <label>Original Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>