force-app/main/default/objects/Opportunity/fields/DU_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>DU_PaymentType__c</fullName>
    <description>CDM: Contains the type of payment, values One-off or monthly</description>
    <inlineHelpText>Contains the type of payment, values One-off or monthly</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-off</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>