force-app/main/default/objects/Opportunity/fields/DU_PrimaryCampaignSource__c.field-meta.xml
<CustomField>
    <fullName>DU_PrimaryCampaignSource__c</fullName>
    <description>CDM: Displays the Primary Campaign Source to allow to use it in e.g. list views.</description>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Campaign Source</label>
    <type>Text</type>
</CustomField>