force-app/main/default/objects/Opportunity/fields/DU_ProductName__c.field-meta.xml
<CustomField>
    <fullName>DU_ProductName__c</fullName>
    <description>CDM: Contains the VWFS product name as free text</description>
    <inlineHelpText>Contains the VWFS product name as free text</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>