force-app/main/default/objects/Opportunity/fields/DU_ProvidingPartner__c.field-meta.xml
<CustomField>
    <fullName>DU_ProvidingPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the opportunity to the providing partner (dealer)</description>
    <inlineHelpText>Relates the opportunity to the providing partner (dealer)</inlineHelpText>
    <label>Providing Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>VWFS CRM Dealer Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Providing Partner)</relationshipLabel>
    <relationshipName>DU_OpportunitiesProvidingPartner</relationshipName>
    <type>Lookup</type>
</CustomField>