force-app/main/default/objects/Opportunity/fields/DU_SignaturePercentage__c.field-meta.xml
<CustomField>
    <fullName>DU_SignaturePercentage__c</fullName>
    <description>CDM: Effort based remuneration - contract Signature percentage</description>
    <label>Signature/Contract Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>