force-app/main/default/objects/Opportunity/fields/DU_SignatureSource__c.field-meta.xml
<CustomField>
    <fullName>DU_SignatureSource__c</fullName>
    <description>CDM: Effort based remuneration - who executed Signature of contract</description>
    <inlineHelpText>Effort based remuneration - who executed Signature of contract</inlineHelpText>
    <label>Signature/Contract Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_RemunerationSource</valueSetName>
    </valueSet>
</CustomField>