force-app/main/default/objects/Opportunity/fields/DU_SignatureTimestamp__c.field-meta.xml
<CustomField>
    <fullName>DU_SignatureTimestamp__c</fullName>
    <description>CDM: Effort based remuneration - contract Signature timestamp</description>
    <label>Signature/Contract Timestamp</label>
    <type>DateTime</type>
</CustomField>