force-app/main/default/objects/Opportunity/fields/DU_SourceJourney__c.field-meta.xml
<CustomField>
    <fullName>DU_SourceJourney__c</fullName>
    <description>CDM: Describes the source of the journey. Availability 2.1.0-19</description>
    <inlineHelpText>Description of the source of the journey (e.g. HeyCar or CUPRA)</inlineHelpText>
    <label>Source Journey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>