force-app/main/default/objects/Opportunity/fields/DU_SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>DU_SourceSystem__c</fullName>
    <description>CDM: Relates the opportunity to the source system of the application</description>
    <inlineHelpText>Relates the opportunity to the source system of the application</inlineHelpText>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>