force-app/main/default/objects/Opportunity/fields/DU_TransactionId__c.field-meta.xml
<CustomField>
    <fullName>DU_TransactionId__c</fullName>
    <description>CDM: Contains the transaction ID, which identifies the source campaign of this opportunity</description>
    <externalId>true</externalId>
    <inlineHelpText>Format of 8-4-4-4-12 hexadecimal digits.</inlineHelpText>
    <label>Transaction Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>