force-app/main/default/objects/Opportunity/recordTypes/DU_MasterOpportunity.recordType-meta.xml
<RecordType>
    <fullName>DU_MasterOpportunity</fullName>
    <active>true</active>
    <businessProcess>Master Opportunities</businessProcess>
    <label>Master Opportunity</label>
</RecordType>