force-app/main/default/objects/Opportunity/recordTypes/DU_ProductOpportunity.recordType-meta.xml
<RecordType>
    <fullName>DU_ProductOpportunity</fullName>
    <active>true</active>
    <businessProcess>Product Opportunities</businessProcess>
    <label>Product Opportunity</label>
</RecordType>