force-app/main/default/objects/Opportunity/validationRules/DU_CheckIfAccountIdIsB2B.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_CheckIfAccountIdIsB2B</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &quot;DU_MasterOpportunity&quot;,
 Account.PersonContact.IsPersonAccount
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>The related account has to be a B2B account</errorMessage>
</ValidationRule>