force-app/main/default/objects/Opportunity/validationRules/DU_CheckIfMasterOpportunityIsNullWhenPA.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_CheckIfMasterOpportunityIsNullWhenPA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;DU_ProductOpportunity&quot;,
Account.PersonContact.IsPersonAccount,
 NOT(ISBLANK( DU_MasterOpportunityID__c )) 
)</errorConditionFormula>
    <errorDisplayField>DU_MasterOpportunityID__c</errorDisplayField>
    <errorMessage>Please let the field Master Opportunity Id blank when the related Account is a Person Account.</errorMessage>
</ValidationRule>