force-app/main/default/objects/Opportunity/validationRules/DU_TotalRemunerationPercentageCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_TotalRemunerationPercentageCheck</fullName>
    <active>true</active>
    <description>Effort based remuneration - the total of assigned percentages has to be 100</description>
    <errorConditionFormula>(
BLANKVALUE(DU_LeadGenerationPercentage__c, 0) +
BLANKVALUE(DU_OfferPercentage__c, 0) +
BLANKVALUE(DU_ApplicationPercentage__c, 0) +
BLANKVALUE(DU_HandoverPercentage__c, 0) +
BLANKVALUE(DU_SignaturePercentage__c, 0)
)&gt;1</errorConditionFormula>
    <errorMessage>Combined total percentage value of Remuneration percentages must not exceed 100%</errorMessage>
</ValidationRule>